[gd_scene load_steps=12 format=3 uid="uid://cm32icboarbjk"]

[ext_resource type="Script" path="res://Game.gd" id="1_6giik"]
[ext_resource type="PackedScene" uid="uid://ngmi40wub50r" path="res://Level.tscn" id="1_7204i"]
[ext_resource type="PackedScene" uid="uid://bk05aps506s1v" path="res://PlacementGrid.tscn" id="2_gdkvc"]
[ext_resource type="Texture2D" uid="uid://dj8j42j5i85m0" path="res://assets/kenney_pixel-platformer/Tiles/tile_0026.png" id="2_van8i"]
[ext_resource type="PackedScene" uid="uid://cfbmmbiwodlx1" path="res://Toolbox.tscn" id="5_oyhps"]
[ext_resource type="PackedScene" uid="uid://c08py8cloi81" path="res://Player.tscn" id="6_0x5li"]

[sub_resource type="GDScript" id="GDScript_vft3i"]
script/source = "extends Node2D

var dim: Vector2i
var positions: Array[Vector2i]

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i81mk"]
size = Vector2(32, 32)

[sub_resource type="PackedScene" id="PackedScene_248ni"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Block", "Node2D", "script", "Tile0026", "Sprite2D", "position", "scale", "texture", "Body", "StaticBody2D", "CollisionShape", "CollisionShape2D", "position", "shape"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("./Body")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 1, 2, 0, 0, 1073741824, 0, 4, 3, -1, 3, 5, 1, 6, 2, 7, 3, 0, 1073741825, 0, 9, 8, -1, 0, 0, 1073741826, 0, 11, 10, -1, 2, 12, 4, 13, 5, 0),
"variants": [SubResource("GDScript_vft3i"), Vector2(16, 16), Vector2(1.77778, 1.77778), ExtResource("2_van8i"), Vector2(16, 16), SubResource("RectangleShape2D_i81mk")],
"version": 3
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqqtt"]
size = Vector2(1152, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k75vo"]
size = Vector2(50, 18)

[node name="Game" type="Node2D"]
script = ExtResource("1_6giik")
Block = SubResource("PackedScene_248ni")
metadata/_edit_lock_ = true

[node name="Level" parent="." instance=ExtResource("1_7204i")]

[node name="PlacementGrid" parent="." instance=ExtResource("2_gdkvc")]
visible = false
modulate = Color(0.627451, 0.627451, 0.627451, 1)

[node name="zindenode" type="Node2D" parent="."]

[node name="HUDLayer" type="CanvasLayer" parent="zindenode"]
offset = Vector2(2.08165e-12, 2.08165e-12)
transform = Transform2D(1, 0, 0, 1, 2.08165e-12, 2.08165e-12)

[node name="Toolbox" parent="zindenode/HUDLayer" instance=ExtResource("5_oyhps")]
z_as_relative = false
offset_top = 1.38283e-05

[node name="EditLevelButton" type="Button" parent="zindenode/HUDLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -25.0
offset_right = 83.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "EDIT LEVEL"

[node name="RotateButton" type="Button" parent="zindenode/HUDLayer"]
offset_left = 1008.0
offset_top = 8.0
offset_right = 1148.0
offset_bottom = 39.0
text = "Rotate 90 degree"

[node name="Player" parent="." instance=ExtResource("6_0x5li")]
position = Vector2(104, 520)

[node name="deathPolygon" type="Area2D" parent="."]
position = Vector2(0, 688)
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathPolygon"]
position = Vector2(576, 0)
shape = SubResource("RectangleShape2D_eqqtt")

[node name="winPolygon" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="winPolygon"]
position = Vector2(1039, 537)
shape = SubResource("RectangleShape2D_k75vo")

[connection signal="clear_level" from="." to="Level" method="_on_game_clear_level"]
[connection signal="editing_ended" from="." to="Level" method="_on_game_editing_ended"]
[connection signal="editing_started" from="." to="Level" method="_on_game_editing_started"]
[connection signal="editing_started" from="." to="zindenode/HUDLayer/Toolbox" method="_on_game_editing_started"]
[connection signal="block_placed" from="Level" to="." method="_on_level_block_placed"]
[connection signal="player_death" from="Level" to="." method="_on_level_player_death"]
[connection signal="select_block" from="zindenode/HUDLayer/Toolbox" to="Level" method="_on_toolbox_select_block"]
[connection signal="pressed" from="zindenode/HUDLayer/EditLevelButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="zindenode/HUDLayer/RotateButton" to="Level" method="_on_button_pressed"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="body_entered" from="deathPolygon" to="Player" method="_on_death_polygon_body_entered"]
[connection signal="body_entered" from="winPolygon" to="." method="_on_win_polygon_body_entered"]
